added all detail about me possible on config to see if something happens :D

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ plugins:
 site: Jonathan Gheller
 url: gheller.com
 title: Jonathan Gheller
-description: Simple and minimalistic jekyll blogging theme.
+description: A write here - jgheller
 twitter:
   username: jgheller
   card: summary
