typo on config file

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ plugins:
 site: Jonathan Gheller
 url: gheller.com
 title: Jonathan Gheller
-description: A write here - jgheller
+description: I write here 
 twitter:
   username: jgheller
   card: summary
